--- a/about.html
+++ b/about.html
@@ -695,6 +695,10 @@
                                 <div class="country-flags" style="background-color: #D7141A;"></div>
                                 <span class="country-name">Чехия</span>
                             </a>
+                              <a href="./turkey.html" class="country-items">
+                                <div class="country-flags" style="background-color: #E30A17;"></div>
+                                <span class="country-name">Турция</span>
+                            </a>
                         </div>
                     </li>
                    <li><a href="./index.html#application">Анкета</a></li>
@@ -786,6 +790,16 @@
                     <div class="team-info">
                         <h3>Альтаир</h3>
                         <div class="position">Куратор в Южной Корее</div>
+                        <p> </p>
+                    </div>
+                </div>
+                 <div class="team-card fade-in">
+                    <div class="team-image" style="background-color: #e9ecef;">
+                        <img src="./images/аяла.jpg" class="team-image" alt="">
+                    </div>
+                    <div class="team-info">
+                        <h3>Аяла</h3>
+                        <div class="position">Куратор в Турции</div>
                         <p> </p>
                     </div>
                 </div>
