--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                                 <div class="country-flags" style="background-color: #D7141A;"></div>
                                 <span class="country-name">Чехия</span>
                             </a>
+                              <a href="./turkey.html" class="country-items">
+                                <div class="country-flags" style="background-color: #E30A17;"></div>
+                                <span class="country-name">Турция</span>
+                            </a>
                         </div>
                     </li>
                    <li><a href="./index.html#application">Анкета</a></li>
@@ -54,7 +58,7 @@
     <section class="hero">
         <div class="container">
             <h1 class="fade-in">Образование за рубежом с Kiparis Global Academy</h1>
-            <p class="fade-in">Мы помогаем студентам поступать и учиться в ведущих вузах Южной Кореи, Китая, Испании и Чехии</p>
+            <p class="fade-in">Мы помогаем студентам поступать и учиться в ведущих вузах Южной Кореи, Китая, Испании, Чехии и Турции</p>
             <a href="#application" class="btn btn-gold fade-in">Подать заявку</a>
         </div>
     </section>
@@ -100,6 +104,16 @@
                         <a href="south-korea.html" class="btn">Подробнее</a>
                     </div>
                 </div>
+                <div class="country-card fade-in">
+    <div class="country-flag">
+        <img src="./images/turkey.jpg" style="width: 100%; height: 150px;" alt="Турция">
+    </div>
+    <div class="country-info">
+        <h3>Турция</h3>
+        <p>Европейское качество образования по доступным ценам</p>
+        <a href="turkey.html" class="btn">Подробнее</a>
+    </div>
+</div>
                 <div class="country-card fade-in">
                     <div class="country-flag" >
                          <img src="./images/chinese.jpg" style="width: 100%; height: 150px;">
@@ -198,6 +212,10 @@
             <div class="universities-filter">
                 <button class="filter-btn active" data-filter="all">Все</button>
                 <button class="filter-btn" data-filter="korea">Южная Корея</button>
+                <a href="./turkey.html" class="country-items">
+    <div class="country-flags" style="background-color: #E30A17;"></div>
+    <span class="country-name">Турция</span>
+</a>
                 <button class="filter-btn" data-filter="china">Китай</button>
                 <button class="filter-btn" data-filter="spain">Испания</button>
                 <button class="filter-btn" data-filter="czech">Чехия</button>
@@ -561,6 +579,8 @@
                         <li><a href="italy.html">Италия</a></li>
                         <li><a href="spain.html">Испания</a></li>
                         <li><a href="czech.html">Чехия</a></li>
+                                                <li><a href="turkey.html">Турция</a></li>
+
                     </ul>
                 </div>
                
