--- a/italy.html
+++ b/italy.html
@@ -890,6 +890,10 @@
                                 <div class="country-flags" style="background-color: #D7141A;"></div>
                                 <span class="country-name">Чехия</span>
                             </a>
+                              <a href="./turkey.html" class="country-items">
+                                <div class="country-flags" style="background-color: #E30A17;"></div>
+                                <span class="country-name">Турция</span>
+                            </a>
                         </div>
                     </li>
                     <li><a href="./index.html#application">Анкета</a></li>
@@ -1589,7 +1593,7 @@
         <div class="container">
             <h2 class="fade-in">Готовы начать обучение в Италии?</h2>
             <p class="fade-in">Оставьте заявку, и наш специалист свяжется с вами для бесплатной консультации</p>
-            <a href="application.html" class="btn btn-gold fade-in">Подать заявку</a>
+            <a href="./index.html#application" class="btn btn-gold fade-in">Подать заявку</a>
         </div>
     </section>
 
