--- a/south-korea.html
+++ b/south-korea.html
@@ -1012,6 +1012,10 @@
                                 <div class="country-flags" style="background-color: #D7141A;"></div>
                                 <span class="country-name">Чехия</span>
                             </a>
+                              <a href="./turkey.html" class="country-items">
+                                <div class="country-flags" style="background-color: #E30A17;"></div>
+                                <span class="country-name">Турция</span>
+                            </a>
                         </div>
                     </li>
                    <li><a href="./index.html#application">Анкета</a></li>
