--- a/italy.html
+++ b/italy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Обучение в Италии - Kiparis Global Academy</title>
+            <link rel="stylesheet" href="timeplan.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Open+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>/* Стили для модальных окон */
         .modal {
@@ -1436,6 +1437,198 @@
         </div>
     </div>
 
+<!-- Таймлайн поступления -->
+<section class="admission-timeline">
+    <div class="container">
+        <div class="section-title">
+            <h2>📅 План поступления в Италию</h2>
+            <p>Пошаговый график для успешного зачисления в итальянские университеты</p>
+        </div>
+        
+        <div class="timeline-container">
+            <!-- Основная информация -->
+            <div class="timeline-header fade-in">
+                <div class="header-card">
+                    <div class="header-icon">🇮🇹</div>
+                    <div class="header-content">
+                        <h3>Обучение в Италии</h3>
+                        <div class="header-details">
+                            <div class="detail">
+                                <span class="label">📅 Начало учебы:</span>
+                                <span class="value">Сентябрь – Октябрь</span>
+                            </div>
+                            <div class="detail">
+                                <span class="label">⏰ Начало подготовки:</span>
+                                <span class="value">За 9–12 месяцев</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Таймлайн -->
+            <div class="timeline">
+
+                <!-- Декабрь–Март -->
+                <div class="timeline-item fade-in">
+                    <div class="timeline-marker">
+                        <div class="marker-icon">🎯</div>
+                        <div class="timeline-line"></div>
+                    </div>
+                    <div class="timeline-content">
+                        <div class="timeline-period">Декабрь – Март</div>
+                        <h3 class="timeline-title">Подготовка документов</h3>
+                        <div class="timeline-description">
+                            <ul>
+                                <li>Аттестат и академические транскрипты</li>
+                                <li>Переводы и апостиль документов</li>
+                                <li>Языковые сертификаты (итальянский или английский)</li>
+                                <li>Мотивационное письмо</li>
+                                <li>Рекомендательные письма</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Апрель–Июль -->
+                <div class="timeline-item fade-in">
+                    <div class="timeline-marker">
+                        <div class="marker-icon">📝</div>
+                        <div class="timeline-line"></div>
+                    </div>
+                    <div class="timeline-content">
+                        <div class="timeline-period">Апрель – Июль</div>
+                        <h3 class="timeline-title">Pre-enrollment через Universitaly</h3>
+                        <div class="timeline-description">
+                            <p>Подача заявок через официальный портал Universitaly для выбранных программ.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Июнь–Июль -->
+                <div class="timeline-item fade-in">
+                    <div class="timeline-marker">
+                        <div class="marker-icon">🎓</div>
+                        <div class="timeline-line"></div>
+                    </div>
+                    <div class="timeline-content">
+                        <div class="timeline-period">Июнь – Июль</div>
+                        <h3 class="timeline-title">Вступительные экзамены</h3>
+                        <div class="timeline-description">
+                            <p>В зависимости от программы могут потребоваться экзамены (Test di ammissione).</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Июль–Август -->
+                <div class="timeline-item fade-in">
+                    <div class="timeline-marker">
+                        <div class="marker-icon">🛂</div>
+                        <div class="timeline-line"></div>
+                    </div>
+                    <div class="timeline-content">
+                        <div class="timeline-period">Июль – Август</div>
+                        <h3 class="timeline-title">Оформление визы</h3>
+                        <div class="timeline-description">
+                            <ul>
+                                <li>Подготовка документов для студенческой визы</li>
+                                <li>Подтверждение зачисления</li>
+                                <li>Финансовые гарантии и страховка</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Сентябрь -->
+                <div class="timeline-item fade-in">
+                    <div class="timeline-marker">
+                        <div class="marker-icon">✈️</div>
+                        <div class="timeline-line"></div>
+                    </div>
+                    <div class="timeline-content">
+                        <div class="timeline-period">Сентябрь</div>
+                        <h3 class="timeline-title">Приезд и оформление документов</h3>
+                        <div class="timeline-description">
+                            <ul>
+                                <li>Поиск и заселение в жильё</li>
+                                <li>Регистрация в университете</li>
+                                <li>Получение студенческой карточки</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Сентябрь–Октябрь -->
+                <div class="timeline-item fade-in">
+                    <div class="timeline-marker">
+                        <div class="marker-icon">🏫</div>
+                    </div>
+                    <div class="timeline-content">
+                        <div class="timeline-period">Сентябрь – Октябрь</div>
+                        <h3 class="timeline-title">Начало учебы</h3>
+                        <div class="timeline-description">
+                            <ul>
+                                <li>Orientation Week</li>
+                                <li>Регистрация на курсы</li>
+                                <li>Знакомство с преподавателями и кампусом</li>
+                                <li>Начало занятий</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+            </div> <!-- timeline end -->
+        </div>
+    </div>
+</section>
+
+
+        <!-- Процесс поступления -->
+    <section class="admission-process">
+        <div class="container">
+            <div class="section-title">
+                <h2>Процесс поступления в итальянские университеты</h2>
+                <p>Пошаговое руководство для будущих студентов</p>
+            </div>
+            <div class="process-steps">
+                <div class="process-step fade-in">
+                    <div class="step-number">1</div>
+                    <div class="step-content">
+                        <h3>Консультация</h3>
+                        <p>Определяем ваши цели, выбираем университет и программу</p>
+                    </div>
+                </div>
+                <div class="process-step fade-in">
+                    <div class="step-number">2</div>
+                    <div class="step-content">
+                        <h3>Подготовка документов</h3>
+                        <p>Помогаем собрать и оформить все необходимые документы</p>
+                    </div>
+                </div>
+                <div class="process-step fade-in">
+                    <div class="step-number">3</div>
+                    <div class="step-content">
+                        <h3>Подача заявления</h3>
+                        <p>Отправляем заявку в выбранные университеты через портал Universitaly</p>
+                    </div>
+                </div>
+                <div class="process-step fade-in">
+                    <div class="step-number">4</div>
+                    <div class="step-content">
+                        <h3>Получение визы</h3>
+                        <p>Помогаем оформить студенческую визу типа D</p>
+                    </div>
+                </div>
+                <div class="process-step fade-in">
+                    <div class="step-number">5</div>
+                    <div class="step-content">
+                        <h3>Переезд и адаптация</h3>
+                        <p>Оказываем поддержку после прибытия в Италию</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Культура Италии -->
     <section class="culture">
@@ -1483,53 +1676,6 @@
                 </div>
                 <div class="culture-image fade-in">
                     <img src="https://images.unsplash.com/photo-1515542622106-78bda8ba0e5b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Итальянская культура">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Процесс поступления -->
-    <section class="admission-process">
-        <div class="container">
-            <div class="section-title">
-                <h2>Процесс поступления в итальянские университеты</h2>
-                <p>Пошаговое руководство для будущих студентов</p>
-            </div>
-            <div class="process-steps">
-                <div class="process-step fade-in">
-                    <div class="step-number">1</div>
-                    <div class="step-content">
-                        <h3>Консультация</h3>
-                        <p>Определяем ваши цели, выбираем университет и программу</p>
-                    </div>
-                </div>
-                <div class="process-step fade-in">
-                    <div class="step-number">2</div>
-                    <div class="step-content">
-                        <h3>Подготовка документов</h3>
-                        <p>Помогаем собрать и оформить все необходимые документы</p>
-                    </div>
-                </div>
-                <div class="process-step fade-in">
-                    <div class="step-number">3</div>
-                    <div class="step-content">
-                        <h3>Подача заявления</h3>
-                        <p>Отправляем заявку в выбранные университеты через портал Universitaly</p>
-                    </div>
-                </div>
-                <div class="process-step fade-in">
-                    <div class="step-number">4</div>
-                    <div class="step-content">
-                        <h3>Получение визы</h3>
-                        <p>Помогаем оформить студенческую визу типа D</p>
-                    </div>
-                </div>
-                <div class="process-step fade-in">
-                    <div class="step-number">5</div>
-                    <div class="step-content">
-                        <h3>Переезд и адаптация</h3>
-                        <p>Оказываем поддержку после прибытия в Италию</p>
-                    </div>
                 </div>
             </div>
         </div>
@@ -1588,63 +1734,22 @@
             </div>
         </div>
     </section>
-    <!-- CTA секция -->
-    <section class="cta-section">
-        <div class="container">
-            <h2 class="fade-in">Готовы начать обучение в Италии?</h2>
-            <p class="fade-in">Оставьте заявку, и наш специалист свяжется с вами для бесплатной консультации</p>
-            <a href="./index.html#application" class="btn btn-gold fade-in">Подать заявку</a>
-        </div>
-    </section>
 
-    <!-- Футер -->
-    <footer>
-        <div class="container">
-            <div class="footer-grid">
-                <div class="footer-col">
-                    <h3>Kiparis Global Academy</h3>
-                    <p>Мы помогаем студентам поступать и учиться в ведущих вузах Южной Кореи, Китая, Италии, Испании и Чехии.</p>
-                    <div class="social-links">
-                        <a href="https://instagram.com/hanguk_uniway_" target="_blank" class="social-link">
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
-                            </svg>
-                            @hanguk_uniway_
-                        </a>
-                        <a href="https://www.tiktok.com/@jden053" target="_blank" class="social-link">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 256 256">
-                                <path fill="#25F4EE" d="M152.9 0h36.6v36.4c12.3 8.6 27.4 13.6 43.3 13.6V86c-16.3 0-31.9-3.6-46-10v84.1c0 47.8-38.8 86.6-86.6 86.6C52.4 246.7 13.5 207.9 13.5 160.1S52.3 73.5 100.1 73.5c5.3 0 10.5.5 15.5 1.4v39.7c-4.9-1.4-10.1-2.1-15.5-2.1-26.5 0-48.1 21.5-48.1 48.1s21.5 48.1 48.1 48.1c26.5 0 48.1-21.5 48.1-48.1V0z"/>
-                                <path fill="#FE2C55" d="M189.5 36.4V72c-10.5-7.3-19.6-16.5-27-27V0h-9.6v160.1c0 47.8-38.8 86.6-86.6 86.6C52.4 246.7 13.5 207.9 13.5 160.1S52.3 73.5 100.1 73.5c5.3 0 10.5.5 15.5 1.4v39.7c-4.9-1.4-10.1-2.1-15.5-2.1-26.5 0-48.1 21.5-48.1 48.1s21.5 48.1 48.1 48.1c26.5 0 48.1-21.5 48.1-48.1V0h44.3z"/>
-                            </svg>
-                            @jden053
-                        </a>
-                    </div>
-                </div>
-                <div class="footer-col">
-                    <h3>Страны</h3>
-                   <ul>
-                        <li><a href="south-korea.html">Южная Корея</a></li>
-                        <li><a href="china.html">Китай</a></li>
-                        <li><a href="italy.html">Италия</a></li>
-                        <li><a href="spain.html">Испания</a></li>
-                        <li><a href="czech.html">Чехия</a></li>
-                    </ul>
-                </div>
-               
-                <div class="footer-col">
-                    <h3>Контакты</h3>
-                    <ul>
-                        <li>📞 +821029121007</li>
-                        <li>✉️ globalacademykiparis@gmail.com</li>
-                        <li>📍 충남 아산시 용화동 1527</li>
-                    </ul>
+   <!-- Призыв к действию -->
+            <div class="timeline-cta fade-in">
+                <div class="cta-content">
+                    <h3>Готовы начать подготовку?</h3>
+                    <p>Не откладывайте свое будущее! Начните процесс поступления уже сегодня</p>
+                    <a href="./index.html#application" class="btn btn-gold">Начать поступление</a>
                 </div>
             </div>
-            <div class="copyright">
-                <p>&copy; 2025 Kiparis Global Academy. Все права защищены.</p>
-            </div>
-        </div>
-    </footer>
+ <div id="footer-placeholder"></div>
+
+<script>
+fetch('footer.html')
+  .then(response => response.text())
+  .then(data => document.getElementById('footer-placeholder').innerHTML = data);
+</script>
 
     <script>
 
